RESOLVED FIXED164020
First parameter to TextTrack.addCue() / removeCue() should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=164020
Summary First parameter to TextTrack.addCue() / removeCue() should not be nullable
Chris Dumez
Reported 2016-10-26 09:54:50 PDT
First parameter to TextTrack.addCue() / removeCue() should not be nullable: - https://html.spec.whatwg.org/#texttrack Firefox and Chrome agree with the specification.
Attachments
Patch (13.36 KB, patch)
2016-10-26 09:56 PDT, Chris Dumez
no flags
Patch (13.37 KB, patch)
2016-10-26 10:05 PDT, Chris Dumez
commit-queue: commit-queue-
Chris Dumez
Comment 1 2016-10-26 09:56:29 PDT
Eric Carlson
Comment 2 2016-10-26 10:01:31 PDT
Comment on attachment 292937 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=292937&action=review > LayoutTests/ChangeLog:11 > + * fast/media/texttrack-addCue-null-expected.txt: Added. > + * fast/media/texttrack-addCue-null.html: Added. I think this test should be in LayoutTests/media/track/ with the rest of the text track tests. Almost all of the tests in LayoutTests/fast/media/ are for media queries.
Chris Dumez
Comment 3 2016-10-26 10:05:16 PDT
WebKit Commit Bot
Comment 4 2016-10-26 11:19:43 PDT
Comment on attachment 292939 [details] Patch Rejecting attachment 292939 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 292939, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/2379801
Chris Dumez
Comment 5 2016-10-26 12:30:13 PDT
Note You need to log in before you can comment on or make changes to this bug.