First parameter to TextTrack.addCue() / removeCue() should not be nullable https://bugs.webkit.org/show_bug.cgi?id=164020

Reviewed by Eric Carlson.

Source/WebCore:

First parameter to TextTrack.addCue() / removeCue() should not be nullable:
- https://html.spec.whatwg.org/#texttrack

Firefox and Chrome agree with the specification.

Test: media/track/texttrack-addCue-null.html

* html/track/InbandDataTextTrack.cpp:
(WebCore::InbandDataTextTrack::removeDataCue):
(WebCore::InbandDataTextTrack::removeCue):
* html/track/InbandDataTextTrack.h:
* html/track/InbandGenericTextTrack.cpp:
(WebCore::InbandGenericTextTrack::addGenericCue):
(WebCore::InbandGenericTextTrack::removeGenericCue):
(WebCore::InbandGenericTextTrack::removeCue):
* html/track/InbandGenericTextTrack.h:
* html/track/TextTrack.cpp:
(WebCore::TextTrack::addCue):
(WebCore::TextTrack::removeCue):
* html/track/TextTrack.h:
* html/track/TextTrack.idl:

LayoutTests:

Add layout test coverage.

* media/track/texttrack-addCue-null-expected.txt: Added.
* media/track/texttrack-addCue-null.html: Added.

Canonical link: https://commits.webkit.org/181760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207907 268f45cc-cd09-0410-ab3c-d52691b4dbfc