Source/WebCore/html/track/TextTrack.h
@@ -100,8 +100,8 @@ public:
     void clearClient() override { m_client = nullptr; }
     TextTrackClient* client() { return m_client; }
 
-    ExceptionOr<void> addCue(RefPtr<TextTrackCue>&&);
-    virtual ExceptionOr<void> removeCue(TextTrackCue*);
+    ExceptionOr<void> addCue(Ref<TextTrackCue>&&);
+    virtual ExceptionOr<void> removeCue(TextTrackCue&);
 
     bool hasCue(TextTrackCue*, TextTrackCue::CueMatchRules = TextTrackCue::MatchAllFields);
 
